// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jWa-Dst"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 cqUrbm"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dwYsTd"
      >
        <h1
          class="StyledHeading-sc-1rdh4aw-0 bdzteO"
        >
          grommet designer
        </h1>
        <p
          class="StyledParagraph-sc-tbetod-0 cfAovM"
        >
          design with grommet components
        </p>
        <a
          class="StyledButton-sc-323bzc-0 bUlsZM"
          href="/_new"
          title="start a new design"
        >
          New Design
        </a>
        <div
          class="StyledBox-sc-13pk1d4-0 kGMroR"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fvmIiV FileInput__ContentsBox-sc-1jzq7im-0 cWXikG"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 USRwM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bsTMTM FileInput__Message-sc-1jzq7im-2 gfzwDx"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 eysSdj"
              tabindex="0"
            >
              browse
            </a>
          </div>
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 jBwQTO"
            type="file"
          />
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 jsEgFI"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jzOfgr"
            id="themeMode"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
              for="themeMode-dark"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                  id="themeMode-dark"
                  name="themeMode"
                  tabindex="0"
                  type="radio"
                  value="dark"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 yCrnp StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 ebEcYD"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                dark
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
              for="themeMode-light"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                  id="themeMode-light"
                  name="themeMode"
                  tabindex="-1"
                  type="radio"
                  value="light"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                light
              </span>
            </label>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
          />
          <label
            class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 Ecyyo"
            label="right to left"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 gibDHu StyledCheckBox-sc-1dbk5ju-6 eJWclz"
            >
              <input
                class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cUmXGB"
                type="checkbox"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 iZMNbh StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
              />
            </div>
            <span>
              right to left
            </span>
          </label>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDuwKF"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 iyQDwk"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bLMcwJ"
        >
          <header
            class="StyledBox-sc-13pk1d4-0 gZzeNk"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 hcNYla"
            >
              tutorials
            </h2>
          </header>
          <a
            class="StyledButton-sc-323bzc-0 iqZbKa"
            href="https://us-central1-grommet-designer.cloudfunctions.net/images/eric-soderberg-hpe-com/designer%20introduction%202a.mp4"
            target="_blank"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iNDmPr"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bhtNSP"
              >
                <img
                  class="StyledImage-sc-ey4zx9-0 hxQdwK"
                  src="https://us-central1-grommet-designer.cloudfunctions.net/images/eric-soderberg-hpe-com/designer-tutorial-introduction.png"
                />
              </div>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
              />
              <span
                class="StyledText-sc-1sadyjn-0 issflU"
              >
                introduction
              </span>
            </div>
          </a>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kGhSUQ"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 hFkNOm"
        >
          <h2
            class="StyledHeading-sc-1rdh4aw-0 hcNYla"
          >
            inspiration
          </h2>
          <div
            class="StyledBox-sc-13pk1d4-0 lcZprh"
          >
            <a
              class="StyledButton-sc-323bzc-0 iqZbKa"
              href="https://designer.grommet.io/?id=HPE-design-system-hpedesignsystem-hpe-com&mode=edit"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iNDmPr"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bhtNSP"
                />
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                />
                <span
                  class="StyledText-sc-1sadyjn-0 issflU"
                >
                  HPE design system
                </span>
              </div>
            </a>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
            />
            <a
              class="StyledButton-sc-323bzc-0 iqZbKa"
              href="https://designer.grommet.io/?id=Card-eric-soderberg-hpe-com&mode=edit"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iNDmPr"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bhtNSP"
                />
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                />
                <span
                  class="StyledText-sc-1sadyjn-0 issflU"
                >
                  Card
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jWa-Dst"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ehjiZU"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hbLzhL"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 jgJHvq"
        >
          <h1
            class="StyledHeading-sc-1rdh4aw-0 cmAOqO"
          >
            new design
          </h1>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
          />
          <button
            aria-label="cancel creating a new design"
            class="StyledButton-sc-323bzc-0 kYtlmw"
            type="button"
          >
            <svg
              aria-label="Close"
              class="StyledIcon-sc-ofa7kd-0 cnewlt"
              viewBox="0 0 24 24"
            >
              <path
                d="m3 3 18 18M3 21 21 3"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </header>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceHRnz"
        />
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jmKrpE FormField__FormFieldContentBox-sc-m9hood-1 jVcIHD"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 bYHCOz"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              start with
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jmKrpE FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: blank"
                class="StyledButton-sc-323bzc-0 ghVuhX Select__StyledSelectDropButton-sc-17idtfo-2 ikQPYb"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dsfsDz"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iShJPx"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 bYHCOz Select__SelectTextInput-sc-17idtfo-0 bQAqdj"
                        name="source"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value="blank"
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 hqRAEA"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 evga-dt"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fvdOiR FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jzOfgr"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yCrnp StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 ebEcYD"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 ceqcKv"
          >
            <button
              class="StyledButton-sc-323bzc-0 bUlsZM"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jWa-Dst"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ehjiZU"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hbLzhL"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 jgJHvq"
        >
          <h1
            class="StyledHeading-sc-1rdh4aw-0 cmAOqO"
          >
            new design
          </h1>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
          />
          <button
            aria-label="cancel creating a new design"
            class="StyledButton-sc-323bzc-0 kYtlmw"
            type="button"
          >
            <svg
              aria-label="Close"
              class="StyledIcon-sc-ofa7kd-0 cnewlt"
              viewBox="0 0 24 24"
            >
              <path
                d="m3 3 18 18M3 21 21 3"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </header>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ceHRnz"
        />
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jmKrpE FormField__FormFieldContentBox-sc-m9hood-1 jVcIHD"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 bYHCOz"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              start with
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jmKrpE FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: blank"
                class="StyledButton-sc-323bzc-0 ghVuhX Select__StyledSelectDropButton-sc-17idtfo-2 ikQPYb"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dsfsDz"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iShJPx"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 bYHCOz Select__SelectTextInput-sc-17idtfo-0 bQAqdj"
                        name="source"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value="blank"
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 hqRAEA"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 evga-dt"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fvdOiR FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jzOfgr"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yCrnp StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 ebEcYD"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 ceqcKv"
          >
            <button
              class="StyledButton-sc-323bzc-0 bUlsZM"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jWa-Dst"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ehjiZU"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gUGyqY"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              Select screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fvdOiR FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iNDmPr"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="empty page"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="empty page"
                      name="template"
                      tabindex="0"
                      type="radio"
                      value="empty page"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yCrnp StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 ebEcYD"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    empty page
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="dashboard"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="dashboard"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="dashboard"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    dashboard
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="list"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="list"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="list"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    list
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="table"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="table"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="table"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    table
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="details"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="details"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="details"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    details
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hZkGAh"
                  for="wizard"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="wizard"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="wizard"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKTvBx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    wizard
                  </span>
                </label>
              </div>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 ceqcKv"
          >
            <button
              class="StyledButton-sc-323bzc-0 bUlsZM"
              title="select screen template"
              type="submit"
            >
              Select
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jWa-Dst"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 PBgFD"
      id="designer-canvas"
      style="height: 1px;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fybjsI"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jloYeY"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gsnTZi jfxDfq"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 hnrRJw"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
